--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/public/logoBoolean.webp" /> -->
+  <link rel="icon" type="image/svg+xml" href="/logoBoolean.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nexgen Website</title>
 </head>
